MAT-8231 Not Filtering out Annotation anymore from ELM, Also Updated filtering of ErrorExceptions and ExternalErrors objects returned to display errors in the UI